<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">汉宝</string>
    <string name="version">Version 0.1</string>
    <string name="author">Author: haishand</string>
    <string name="about">关于</string>
    <string name="exit">退出</string>
    <string name="history">历史生字</string>
    <string name="action_settings">Settings</string>
    <string name="togglebutton">ToggleButton</string>

    <!-- activity_about -->
    <string name="about_content">           在读资治通鉴中，发现有很多字不认识，尤其不知道如何读，因此制作了这个软件，希望能为大家在看古书时提供一些帮助。
           如何使用呢？非常简单，启动它后，遇到不认识的字词选中复制，关于字词的读写和意思就会自动弹出来。
           界面还非常简陋，有些功能还没添加，若有意一同开发请发邮件：haishand@yeah.net</string>
    <string name="about_return">返回</string>
    
    <!-- activity_history -->
    <string name="s_btn_delete">删除</string>

</resources>